--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ authors = [
 description = "API"
 readme = "PackageREADME.md"
 requires-python = ">=3.8"
+dependencies = [
+  "jelka-validator"
+]
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
