--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "jelkpy"
+name = "jelka"
 version = "0.0.1"
 authors = [
   { name="Bor Brudar", email="bor.brudar@gmail.com" },
@@ -21,5 +21,5 @@ classifiers = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/Jelka-FMF/Jeklpy"
-Issues = "https://github.com/Jelka-FMF/Jelkpy/issues"
+Homepage = "https://github.com/Jelka-FMF/JelkaPy"
+Issues = "https://github.com/Jelka-FMF/JelkaPy/issues"
